scan card: add members comment and bloc kreason
